--- a/CSS/Leon.css
+++ b/CSS/Leon.css
@@ -159,7 +159,7 @@ body {
 
 /* Start Landing Section */
 .landing {
-    background-image: url(../Images/landing.jpg);
+    background-image: url(../images/Landing.jpg);
     background-size: cover;
     height: calc(100vh - 64px);
     position: relative;
